syntax = "proto3";

package server.link;

message GetLinksPublicTokenRequest {
  // One of following fields is required.
  string plaid_item_id = 1;

  int32 link_id = 2;

  int32 account_id = 3;
}

message GetLinksPublicTokenResponse {
  string plaid_public_token = 1;
}

